--- a/app/src/main/res/layout/activity_game_rank_end.xml
+++ b/app/src/main/res/layout/activity_game_rank_end.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Counter/ Correct Rate"
+        android:text="Counter(s)/ Correct Rate"
         android:id="@+id/textView8"
         android:layout_below="@+id/textViewRankEndPt"
         android:layout_centerHorizontal="true" />
